Fixed the news section offsetting the search stats and the collapse button

--- a/src/scss/modules/_better-search.scss
+++ b/src/scss/modules/_better-search.scss
@@ -760,3 +760,7 @@ body[data-sticky-editbox=true] section#content > form#re621-quick-tags {
 div#page.mode-edit section#content > form#re621-quick-tags {
     display: block;
 }
+
+div.site-notice {
+    margin-bottom: 0.5rem;
+}
